--- a/src/lib/Rnd.Lib/Rnd.Lib.csproj
+++ b/src/lib/Rnd.Lib/Rnd.Lib.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.5.4" />
+  </ItemGroup>
+
 </Project>
